test_suite/tests/ui/float/validate/unknown.stderr
error: Unknown validation rule `meaningful`
 --> tests/ui/float/validate/unknown.rs:3:19
  |
3 | #[nutype(validate(meaningful))]
  |                   ^^^^^^^^^^
